update wbt site

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Gallery Hotel - Lujo y Confort</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMV6LVL9KT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HMV6LVL9KT');
+  </script>
   <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     <div id="root"></div>
