--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Hotel, Gallery Hotel, lujo, habitaciones, servicios de hotel" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logogallery.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Gallery Hotel - Lujo y Confort</title>
+    <title>Gallery Hotel - En el corazón de Medellín </title>
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMV6LVL9KT"></script>
