--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logogallery.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logonatural.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Gallery Hotel: Descubre nuestras lujosas habitaciones y servicios de primera clase." />
     <meta name="keywords" content="Hotel, Gallery Hotel, lujo, habitaciones, servicios de hotel" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logogallery.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logonatural.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Gallery Hotel - En el corazón de Medellín </title>
+    <title>Hotel natural Medellín!</title>
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMV6LVL9KT"></script>
