--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/lleraspark.png" />
+    <link rel="icon" href="%PUBLIC_URL%/zelvanegra.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Gallery Hotel: Descubre nuestras lujosas habitaciones y servicios de primera clase." />
     <meta name="keywords" content="Hotel, Gallery Hotel, lujo, habitaciones, servicios de hotel" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/lleraspark.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/zelvanegra.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Hotel Lleras Park!</title>
   </head>
